WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156547
Media element "user gesture for fullscreen" restriction is never lifted
https://bugs.webkit.org/show_bug.cgi?id=156547
Summary
Media element "user gesture for fullscreen" restriction is never lifted
Eric Carlson
Reported
2016-04-13 11:11:51 PDT
r198609
made the "require user gesture to enter fullscreen" setting block programmatic playback.
Attachments
Proposed patch.
(7.02 KB, patch)
2016-04-13 11:21 PDT
,
Eric Carlson
jer.noble
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-yosemite
(957.82 KB, application/zip)
2016-04-13 12:04 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews104 for mac-yosemite-wk2
(797.07 KB, application/zip)
2016-04-13 12:06 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews117 for mac-yosemite
(852.35 KB, application/zip)
2016-04-13 12:22 PDT
,
Build Bot
no flags
Details
Patch for landing
(8.32 KB, patch)
2016-04-18 07:08 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-04-13 11:13:01 PDT
<
rdar://problem/25707814
>
Eric Carlson
Comment 2
2016-04-13 11:21:02 PDT
Created
attachment 276336
[details]
Proposed patch.
Jer Noble
Comment 3
2016-04-13 12:04:21 PDT
Comment on
attachment 276336
[details]
Proposed patch. r=me, but we should probably figure out why this test is failing on the mac EWS bots before landing.
Build Bot
Comment 4
2016-04-13 12:04:29 PDT
Comment on
attachment 276336
[details]
Proposed patch.
Attachment 276336
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1149650
New failing tests: media/video-fullscreen-restriction-removed.html
Build Bot
Comment 5
2016-04-13 12:04:31 PDT
Created
attachment 276339
[details]
Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 6
2016-04-13 12:06:42 PDT
Comment on
attachment 276336
[details]
Proposed patch.
Attachment 276336
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/1149651
New failing tests: media/video-fullscreen-restriction-removed.html
Build Bot
Comment 7
2016-04-13 12:06:44 PDT
Created
attachment 276340
[details]
Archive of layout-test-results from ews104 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 8
2016-04-13 12:22:23 PDT
Comment on
attachment 276336
[details]
Proposed patch.
Attachment 276336
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1149660
New failing tests: media/video-fullscreen-restriction-removed.html
Build Bot
Comment 9
2016-04-13 12:22:26 PDT
Created
attachment 276341
[details]
Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
Eric Carlson
Comment 10
2016-04-18 07:08:07 PDT
Created
attachment 276633
[details]
Patch for landing
Eric Carlson
Comment 11
2016-04-18 08:25:33 PDT
Committed
r199667
:
http://trac.webkit.org/changeset/199667
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug