Media element "user gesture for fullscreen" restriction is never lifted https://bugs.webkit.org/show_bug.cgi?id=156547 <rdar://problem/25707814>

Reviewed by Jer Noble.

Source/WebCore:

Test: media/video-fullscreen-restriction-removed.html

* html/MediaElementSession.cpp:
(WebCore::MediaElementSession::playbackPermitted): Check fullscreenPermitted rather than
  checking for a user gesture because the restriction can be removed.

LayoutTests:

* media/video-fullscreen-restriction-removed-expected.txt: Added.
* media/video-fullscreen-restriction-removed.html: Added.


Canonical link: https://commits.webkit.org/174802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199667 268f45cc-cd09-0410-ab3c-d52691b4dbfc